--- a/index.html
+++ b/index.html
@@ -232,14 +232,12 @@
   <header>
     <div class="logo">1sL4</div>
     <div class="social-icons">
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-      <a href="#"><i class="fab fa-whatsapp"></i></a> 
-      <a href="#"><i class="fab fa-chrome"></i></a>   
-      <a href="#"><i class="fab fa-google"></i></a> 
-      <a href="#"><i class="fab fa-tiktok"></i></a>   
+      <a href="https://www.facebook.com/profile.php?id=61572636365375"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://x.com/Kazukikazami03"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/otakushirechan?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
+      <a href="https://whatsapp.com/channel/0029VasgyvD9xVJk8V1DEf0g"><i class="fab fa-whatsapp"></i></a> 
+      <a href="https://itsukashiorii.github.io/itsukashiorii/"><i class="fab fa-chrome"></i></a>   
+      <a href="https://itsukashiorii.github.io/akayashi_-funayuurei_./"><i class="fab fa-google"></i></a> 
       <div class="size-toggle" onclick="toggleSizePanel()">
         <i class="fas fa-sliders-h"></i>
       </div>
