--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <a href="https://www.instagram.com/otakushirechan?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
       <a href="https://whatsapp.com/channel/0029VasgyvD9xVJk8V1DEf0g"><i class="fab fa-whatsapp"></i></a> 
       <a href="https://itsukashiorii.github.io/itsukashiorii/"><i class="fab fa-chrome"></i></a>   
-      <a href="https://itsukashiorii.github.io/akayashi_-funayuurei_./"><i class="fab fa-google"></i></a> 
+      <a href="https://itsukashiorii.github.io/itsukashiorii-Goddes-of-destruction-Goddess-of-creation/"><i class="fab fa-google"></i></a> 
       <div class="size-toggle" onclick="toggleSizePanel()">
         <i class="fas fa-sliders-h"></i>
       </div>
